k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: users-api
  labels:
    app: users-api
spec:
  containers:
    - name: users-api
      image: users-api:local
      imagePullPolicy: Never
      ports:
        - containerPort: 3000
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 250m
          memory: 256Mi
      startupProbe:
        httpGet:
          path: /health
          port: 3000
        periodSeconds: 2
        failureThreshold: 30
      livenessProbe:
        httpGet:
          path: /live
          port: 3000
        periodSeconds: 10
        failureThreshold: 3
      readinessProbe:
        httpGet:
          path: /health
          port: 3000
        periodSeconds: 5
        failureThreshold: 3
