k8s/service-nodeport-debug.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-debug
spec:
  type: NodePort
  selector:
    app: users-api
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
    protocol: TCP
