k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
  labels:
    app: users-api
spec:
  type: ClusterIP
  selector:
    app: users-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
