k8s/users-api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-nodeport
spec:
  type: NodePort
  selector:
    app: users-api
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
